# aruco_detector

./: main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-04-basler-aruco-ui.md
docs/superpowers/specs/: 2026-06-04-basler-aruco-ui-design.md
tests/: test_detector.py  test_validation.py
