[project]
name = "aruco-detector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.9",
    "pypylon>=3.0",
    "pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
